--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "three": "^0.156.1"
+        "three": "^0.156.1",
+        "@xenova/transformers": "^2.6.1"
     },
     "devDependencies": {
         "prettier": "3.0.3",
