--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "dependencies": {
-        "three": "^0.156.1",
-        "@xenova/transformers": "^2.6.1"
+        "@xenova/transformers": "^2.6.1",
+        "three": "^0.156.1"
     },
     "devDependencies": {
         "prettier": "3.0.3",
+        "process": "^0.11.10",
         "stats.js": "^0.17.0",
         "vite": "^4.4.9"
     }
