--- a/src/assets/audios/unknown_en-0.json
+++ b/src/assets/audios/unknown_en-0.json
@@ -1,29 +1,34 @@
 {
     "metadata": {
         "soundFile": "../src/assets/audios/unknown_en-0.json",
-        "duration": 1.51,
+        "duration": 1.48,
         "text": "Sorry, I didn't understand."
     },
     "mouthCues": [
         {
             "start": 0.0,
-            "end": 0.13,
+            "end": 0.15,
             "value": "X"
         },
         {
-            "start": 0.13,
+            "start": 0.15,
             "end": 0.26,
             "value": "B"
         },
         {
             "start": 0.26,
-            "end": 0.33,
+            "end": 0.4,
             "value": "D"
         },
         {
-            "start": 0.33,
-            "end": 1.03,
+            "start": 0.4,
+            "end": 0.9,
             "value": "B"
+        },
+        {
+            "start": 0.9,
+            "end": 1.03,
+            "value": "X"
         },
         {
             "start": 1.03,
@@ -37,7 +42,7 @@
         },
         {
             "start": 1.38,
-            "end": 1.51,
+            "end": 1.48,
             "value": "X"
         }
     ]
